Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Idea.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Now () - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula field tracks the number of days since the idea was submitted.</inlineHelpText>
        <label>Idea Age (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Idea_in_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea in Action</label>
        <referenceTo>Ideas_Projects__c</referenceTo>
        <relationshipLabel>Ideas</relationshipLabel>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Idea Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Consideration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coming Soon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>It&apos;s Been Reviewed, But Not Feasible At This Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <label>Update</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>Ideas_Last_7_Days</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <columns>IDEA.IDEA_THEME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days</label>
    </listViews>
    <recordTypes>
        <fullName>AnnouncementsIdeaRecordType</fullName>
        <active>true</active>
        <description>Record type used to associate ideas with a specific community</description>
        <label>Announcements: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRMRolloutIdeaRecordType</fullName>
        <active>true</active>
        <description>Record type used to associate ideas with a specific community</description>
        <label>CRM Rollout: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>CompanywideIdeasIdeaRecordType</fullName>
        <active>true</active>
        <description>Record Type used to associate ideas with a specific community</description>
        <label>*Company-wide Ideas*: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>GreenOfficeInitiativeReduceReuseRecycleIdeaRecordType</fullName>
        <active>true</active>
        <description>Record type used to associate ideas with a specific community</description>
        <label>Green Office Initiative - Reduce, Reuse, Recycle: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>MyFoundationIdeaIdeaRecordType</fullName>
        <active>true</active>
        <description>Record type used to associate ideas with a specific community</description>
        <label>My Foundation Idea: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>MyITIdeaIdeaRecordType</fullName>
        <active>true</active>
        <description>Record type used to associate ideas with a specific community</description>
        <label>My IT Idea: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>MyMarketingIdeaIdeaRecordType</fullName>
        <active>true</active>
        <description>Record type used to associate ideas with a specific community</description>
        <label>My Marketing Idea: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>MyPortalIdeasIdeaRecordType</fullName>
        <active>true</active>
        <description>Record Type used to associate ideas with a specific community</description>
        <label>*My Portal Ideas*: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>MyProductIdeaIdeaRecordType</fullName>
        <active>true</active>
        <description>Record type used to associate ideas with a specific community</description>
        <label>Software: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>MySalesIdeaIdeaRecordType</fullName>
        <active>true</active>
        <description>Record type used to associate ideas with a specific community</description>
        <label>My Sales Idea: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>MyServicesIdeaIdeaRecordType</fullName>
        <active>true</active>
        <description>Record type used to associate ideas with a specific community</description>
        <label>My Service Idea: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a3000000052cKAAQ_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific community</description>
        <label>Hardware: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a3000000052cPAAQ_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific community</description>
        <label>Services: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a3000000052cUAAQ_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific community</description>
        <label>Electronics: Idea Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Obscene_entries</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( Title, &quot;crap&quot;)</errorConditionFormula>
        <errorMessage>Please revise your post with appropriate language.</errorMessage>
    </validationRules>
</CustomObject>